Added CSS and JS libraries

--- a/index.html
+++ b/index.html
@@ -450,5 +450,13 @@
      <div id="back-to-top">
         <a class="top" href="#top" id="top"> <i class="fa fa-angle-up"></i> </a>
      </div>
+
+     <script src="js/jquery-3.4.1.min.js"></script>
+     <script src="js/popper.min.js"></script>
+     <script src="js/bootstrap.min.js"></script>
+     <script src="js/owl.carousel.min.js"></script>
+     <script src="js/slick.min.js"></script>
+     <script src="js/slick-animation.min.js"></script>
+     <script src="js/custom.js"></script>
 </body>
 </html>
